2007-12-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit.c:
	* gedit/gedit-app.c:
	Use gtk functions to load and save accels. Based on a patch by
	MIkael Hermansson.

2007-12-09  Paolo Borelli  <pborelli@katamail.com>

	* plugins/gedit-file-browser-widget.c:
	* plugins/gedit-file-bookmarks-store.c:
	Reorder includes

	* gedit/gedit-print.c:
	Do not use gnome_utils function.

2007-12-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c (sort_recents_mru): fix comparison, spotted
	by Christian Persch.

2007-11-10  Paolo Borelli  <pborelli@katamail.com>

	* plugins/snippets/data/python.xml: fix typo in class snippet.
	Patch by Yoan Blanc.

2007-11-07  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/Placeholder.py: fixed bug not showing a
	default value for python placeholder mirror placeholders

2007-11-04  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c: be more careful when retrieving mtime.

2007-11-02  Steve Frécinaux  <code@istique.net>

	* bindings/python/Makefile.am:
	* bindings/python/gedit.defs:
	* bindings/python/gedit.override:

	Bind gedit.debug in python, in such a way it works like gedit_debug or
	gedit_debug_message without having to specify the filename and line
	number and calling function name.

2007-11-02  Steve Frécinaux  <code@istique.net>

	Fix bug 491442 – gedit.commands.load_uri should only accept valid URIs

	* gedit/gedit-commands-file.c (gedit_commands_load_uri): check that
	the uri is valid before trying to open it.

2007-11-02  Steve Frécinaux  <code@istique.net>

	Fix bug #491312 – External Tools with two lines as input

	* plugins/externaltools/tools/functions.py: go to the beginning of the
	current line instead of the previous one when running an external tool
	on "current line".

2007-10-28  Steve Frécinaux  <code@istique.net>

	* gedit/gedit-utils.c: Use gdk_error_trap_*() to protect direct
	XGetWindowProperty() calls.

2007-10-28  Steve Frécinaux  <code@istique.net>
