@@ -1,3 +1,8 @@
+2007-12-15  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-commands-file.c: fix off by one in goto_line when
+	raising an already open document. Fixes bug #503665.
+
 2007-12-09  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit.c:
